new data-sitekey for captcha

--- a/index.html
+++ b/index.html
@@ -732,8 +732,9 @@ He started a career as teacher and performer in 1974.</p>
                 
                 <div class="g-recaptcha-container">
                   <span class="g-recaptcha-filler"></span>
-                  <button type="submit" value="Submit" class="g-recaptcha btn btn-xl" data-sitekey="6LcH6qQUAAAAAGZeum5a0okPxT77ezA0sz4wBMOq"
-                    data-size="invisible" data-badge="inline" data-callback="onContactCaptcha">
+                  <button type="submit" value="Submit" id='recaptcha' class="g-recaptcha btn btn-xl"
+                    data-sitekey="6LdgmagUAAAAAFEuKe8r2PEkQ77me8pvh3A23oyb" data-size="invisible" data-badge="inline"
+                    data-callback="onContactCaptcha">
                     Send message
                   </button>
                   <span class="filler"></span>
