changed email for captcha

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ He started a career as teacher and performer in 1974.</p>
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <form method="POST" name="sentMessage" id="contactForm" action="https://formspree.io/philippefouquet@mac.com">
+        <form method="POST" name="sentMessage" id="contactForm" action="https://formspree.io/Philippe.Rene.Fouquet@gmail.com">
 
           <fieldset>
             <div class="row">
@@ -722,7 +722,7 @@ He started a career as teacher and performer in 1974.</p>
                 </div>
                 <div class="captcha-error text-danger" id="captcha-error">
                   Message is not sendable due to captcha not loadable. Please contact us at
-                  philippefouquet@mac.com.
+                  Philippe.Rene.Fouquet@gmail.com.
                 </div>
                 <div class="text-danger" id="error" style="display:none;">
                   
